commited for adding server site connection string, and cors permissions

--- a/ProjectDetailsAPI_Dapper/appsettings.json
+++ b/ProjectDetailsAPI_Dapper/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectDetailsConnectionStrings": "Server=ZCONL-140\\SQL2016EXPADV;DataBase=TSProjectDetailsZohoDapper;User=sa;Password=zcon@123;Trusted_Connection=true; TrustServerCertificate=true; Integrated Security=true;",
-    "ProjectsAuthConnectionStrings": "Server=ZCONL-140\\SQL2016EXPADV;DataBase=TSAuthProjectDetailsZohoDapper;User=sa;Password=zcon@123;Trusted_Connection=true;TrustServerCertificate=true"
+    "ProjectDetailsConnectionStrings": "Server=10.235.3.8\\SQL2019STDMPNNEW;DataBase=TSProjectDetailsZoho;User=sa;Password=zcon@123;TrustServerCertificate=true;",
+    "ProjectsAuthConnectionStrings": "Server=10.235.3.8\\SQL2019STDMPNNEW;DataBase=TSAuthProjectDetailsZoho;User=sa;Password=zcon@123;TrustServerCertificate=true"
   },
   "Jwt": {
     "Key": "bbugdtTpoojaYHyteyePOOJAPdgghTYIghdgsgdgsshuytgdYUGDH",
