commited for environmentwise configuration

--- a/ProjectDetailsAPI_Dapper/appsettings.json
+++ b/ProjectDetailsAPI_Dapper/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectDetailsConnectionStrings": "Server=10.235.3.8\\SQL2019STDMPNNEW;DataBase=TSProjectDetailsZoho;User=sa;Password=zcon@123;TrustServerCertificate=true;",
+    "ProjectDetailsConnectionStrings": "Server=10.235.3.8\\SQL2019STDMPNNEW;DataBase=TSProjectDetailsZoho,;User=sa;Password=zcon@123;TrustServerCertificate=true;",
     "ProjectsAuthConnectionStrings": "Server=10.235.3.8\\SQL2019STDMPNNEW;DataBase=TSAuthProjectDetailsZoho;User=sa;Password=zcon@123;TrustServerCertificate=true"
   },
   "Jwt": {
@@ -18,5 +18,14 @@
   "URLS": {
     "APIURL": "https://api.myapi.com/"
   },
-  "MyConfig": "appsettings"
+  "MyConfig": "appsettings",
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "appsettings.development.json",
+      "appsettings.staging.json",
+      "appsettings.production.json",
+      "web.config"
+    ]
+  }
 }
