--- a/ProjectDetailsAPI_Dapper/ProjectDetailsAPI_Dapper.csproj
+++ b/ProjectDetailsAPI_Dapper/ProjectDetailsAPI_Dapper.csproj
@@ -4,7 +4,17 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Configurations>Debug;Release;Staging;Production</Configurations>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Staging|AnyCPU'">
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\Production.pubxml" />
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\Staging.pubxml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
@@ -30,5 +40,24 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
-
+	<ItemGroup Condition=" '$(EnvironmentName)' == 'Development'">
+		<Content Remove="appsettings.Production.json" />
+		<Content Remove="appsettings.Custom.json" />
+		<Content Remove="appsettings.Staging.json" />
+	</ItemGroup>
+	<ItemGroup Condition=" '$(EnvironmentName)' == 'Production'">
+		<Content Remove="appsettings.Development.json" />
+		<Content Remove="appsettings.Custom.json" />
+		<Content Remove="appsettings.Staging.json" />
+	</ItemGroup>
+	<ItemGroup Condition=" '$(EnvironmentName)' == 'Custom'">
+		<Content Remove="appsettings.Development.json" />
+		<Content Remove="appsettings.Production.json" />
+		<Content Remove="appsettings.Staging.json" />
+	</ItemGroup>
+	<ItemGroup Condition=" '$(EnvironmentName)' == 'Staging'">
+		<Content Remove="appsettings.Development.json" />
+		<Content Remove="appsettings.Production.json" />
+		<Content Remove="appsettings.Custom.json" />
+	</ItemGroup>
 </Project>
