--- a/ProjectDetailsAPI_Dapper/ProjectDetailsAPI_Dapper.csproj
+++ b/ProjectDetailsAPI_Dapper/ProjectDetailsAPI_Dapper.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Configurations>Debug;Release;Staging;Production</Configurations>
+    <Configurations>Debug;Release;Staging;Production;Development</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Staging|AnyCPU'">
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\Development.pubxml" />
     <_WebToolingArtifacts Remove="Properties\PublishProfiles\Production.pubxml" />
     <_WebToolingArtifacts Remove="Properties\PublishProfiles\Staging.pubxml" />
   </ItemGroup>
@@ -38,7 +39,6 @@
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 	<ItemGroup Condition=" '$(EnvironmentName)' == 'Development'">
 		<Content Remove="appsettings.Production.json" />
