--- a/ProjectDetailsAPI_Dapper/Properties/launchSettings.json
+++ b/ProjectDetailsAPI_Dapper/Properties/launchSettings.json
@@ -20,6 +20,16 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5001"
     },
+    "Production": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5001"
+    },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
